--- a/backend/.env
+++ b/backend/.env
@@ -17,6 +17,8 @@
 ###> symfony/framework-bundle ###
 APP_ENV=prod
 APP_SECRET={REGENERATE_SECRET}
+APP_HASH={REGENERATE_SECRET}
+APP_VERSION=0.5.0
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
