--- a/backend/composer.json
+++ b/backend/composer.json
@@ -19,6 +19,7 @@
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpoffice/phpspreadsheet": "^4.0",
         "phpstan/phpdoc-parser": "^2.0",
+        "posthog/posthog-php": "^3.6",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "^7.1",
         "symfony/console": "^7.1",
