--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -4,8 +4,11 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    defaultFalse: false
+    defaultTrue: true
     timezone: '%env(TZ)%'
-    registrationDisabled: '%env(bool:default::REGISTRATION_DISABLED)%'
+    registrationDisabled: '%env(bool:defaultFalse::REGISTRATION_DISABLED)%'
+    anonymousDataCollectionDisabled: '%env(bool:default:defaultFalse:ANONYMOUS_DATA_COLLECTION_DISABLED)%'
 
 services:
     # default configuration for services in *this* file
