fix: auto-restart supervisor children

--- a/docker/supervisor/supervisord.conf
+++ b/docker/supervisor/supervisord.conf
@@ -18,6 +18,7 @@ command=/usr/sbin/apache2ctl -D FOREGROUND
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+autorestart=true
 
 [program:queue]
 directory=/opt/expensave
@@ -25,3 +26,4 @@ command=php bin/console messenger:consume --all -vv
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+autorestart=true
