--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,11 @@
 {
     "name": "expensave-frontend",
-    "version": "0.4.6",
+    "version": "0.5.0",
     "scripts": {
         "dev": "ng serve --host 0.0.0.0 --port 18002 --disable-host-check",
         "analyze": "eslint src/",
-        "build": "ng build --configuration production"
+        "build": "ng build --configuration production",
+        "version": "node update-version.js"
     },
     "private": true,
     "dependencies": {
