chore: bump version

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -32,3 +32,5 @@ updates:
     ignore:
       - dependency-name: "@angular*"
         update-types: ["version-update:semver-major"]
+      - dependency-name: "@schematics/angular"
+        update-types: ["version-update:semver-major"]
