--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
         "timers-browserify": "^2.0.12",
         "tslib": "^2.8.1",
         "url": "^0.11.4",
-        "util": "^0.12.5"
+        "util": "^0.12.5",
+        "zone.js": "^0.15.1"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^20",
