--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   application:
-    image: algirdasc/expensave
+    image: algirdasc/expensave:latest
     restart: unless-stopped
     ports:
       - "18000:18000"
