--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         condition: service_healthy
 
   database:
-    image: mariadb:latest
+    image: mariadb:11
     volumes:
       - './db:/var/lib/mysql'
     restart: unless-stopped
