chore: update docker-compose.yml to build from source and remove override
- Added 'build: .' to docker-compose.yml to ensure local changes are included in the build.
- Removed docker-compose.override.yml to avoid confusion.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   application:
-    image: algirdasc/expensave:latest
+    build: .
+    image: expensave:latest
     restart: unless-stopped
     ports:
       - "18000:18000"
