--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
     "name": "expensave-frontend",
-    "version": "0.5.5",
+    "version": "0.5.6",
     "scripts": {
         "dev": "ng serve --host 0.0.0.0 --port 18002 --disable-host-check",
         "analyze": "eslint src/",
@@ -9,20 +9,20 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^20.3.16",
-        "@angular/cdk": "^20.2.14",
-        "@angular/common": "^20.3.16",
-        "@angular/compiler": "^20.3.16",
-        "@angular/core": "^20.3.16",
-        "@angular/forms": "^20.3.16",
-        "@angular/platform-browser": "^20.3.16",
-        "@angular/platform-browser-dynamic": "^20.3.16",
-        "@angular/router": "^20.3.16",
+        "@angular/animations": "^21.1.0",
+        "@angular/cdk": "^21.1.0",
+        "@angular/common": "^21.1.0",
+        "@angular/compiler": "^21.1.0",
+        "@angular/core": "^21.1.0",
+        "@angular/forms": "^21.1.0",
+        "@angular/platform-browser": "^21.1.0",
+        "@angular/platform-browser-dynamic": "^21.1.0",
+        "@angular/router": "^21.1.0",
         "@nebular/auth": "^17.0.0",
         "@nebular/eva-icons": "^17.0.0",
         "@nebular/theme": "^17.0.0",
         "@ngneat/content-loader": "^7.0.0",
-        "angular-resize-event": "git+https://git@github.com/algirdasc/angular-resize-event#5e1dffb9398050f610add5fbfc1040a4c26d225d",
+        "angular-resize-event": "git+https://git@github.com/algirdasc/angular-resize-event#9efd4be7a05ff5134f473601ff575b8d1b43286e",
         "bootstrap": "^5.3.8",
         "chart.js": "^4.5.1",
         "class-transformer": "^0.5.1",
@@ -36,19 +36,19 @@
         "tslib": "^2.8.1",
         "url": "^0.11.4",
         "util": "^0.12.5",
-        "zone.js": "^0.16.0"
+        "zone.js": "^0.15.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^20",
-        "@angular-eslint/builder": "20.7.0",
-        "@angular-eslint/eslint-plugin": "20.7.0",
-        "@angular-eslint/eslint-plugin-template": "20.7.0",
-        "@angular-eslint/schematics": "20.7.0",
-        "@angular-eslint/template-parser": "20.7.0",
+        "@angular-devkit/build-angular": "^21.1.0",
+        "@angular-eslint/builder": "^21.1.0",
+        "@angular-eslint/eslint-plugin": "^21.1.0",
+        "@angular-eslint/eslint-plugin-template": "^21.1.0",
+        "@angular-eslint/schematics": "^21.1.0",
+        "@angular-eslint/template-parser": "^21.1.0",
         "@angular/cli": "^21.1.0",
-        "@angular/compiler-cli": "^20.3.16",
-        "@angular/language-service": "^20.3.16",
-        "@angular/localize": "^20.3.16",
+        "@angular/compiler-cli": "^21.1.0",
+        "@angular/language-service": "^21.1.0",
+        "@angular/localize": "^21.1.0",
         "@eslint/eslintrc": "^3.3.3",
         "@eslint/js": "^9.39.2",
         "@schematics/angular": "^19.2.19",
