fix: statement import validation

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -3,7 +3,7 @@ services:
     build:
       target: development-backend
     volumes:
-      - '.:/opt/expensave'
+      - .:/opt/expensave
     environment:
       APP_ENV: dev
       DATABASE_NAME: dev_expensave
@@ -13,21 +13,21 @@ services:
     depends_on:
       - dev_database
     ports:
-      - "18001:18001"
+      - '18001:18001'
 
   dev_frontend:
     build:
       target: development-frontend
     volumes:
-      - '.:/opt/expensave'
+      - .:/opt/expensave
     ports:
-      - "18002:18002"
+      - '18002:18002'
 
   dev_database:
     image: mariadb:11
     volumes:
-      - 'expensave_db:/var/lib/mysql'
-      - './docker/mariadb/development.init.sql:/docker-entrypoint-initdb.d/init.sql'
+      - expensave_db:/var/lib/mysql
+      - ./docker/mariadb/development.init.sql:/docker-entrypoint-initdb.d/init.sql
     restart: unless-stopped
     environment:
       MARIADB_RANDOM_ROOT_PASSWORD: yes
@@ -35,7 +35,7 @@ services:
       MARIADB_PASSWORD: dev_expensave
       MARIADB_DATABASE: dev_expensave
     ports:
-      - "3306:3306"
+      - '3306:3306'
 
 volumes:
   expensave_db:
