--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
     "name": "expensave-frontend",
-    "version": "0.5.9",
+    "version": "0.5.10",
     "scripts": {
         "dev": "ng serve --host 0.0.0.0 --port 18002 --disable-host-check",
         "analyze": "eslint src/",
@@ -9,18 +9,18 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^21.1.0",
-        "@angular/cdk": "21.0.0",
-        "@angular/common": "^21.1.0",
-        "@angular/compiler": "^21.1.0",
-        "@angular/core": "^21.1.0",
-        "@angular/forms": "^21.1.0",
-        "@angular/platform-browser": "^21.1.0",
-        "@angular/platform-browser-dynamic": "^21.1.0",
-        "@angular/router": "^21.1.0",
-        "@nebular/auth": "^17.0.0",
-        "@nebular/eva-icons": "^17.0.0",
-        "@nebular/theme": "^17.0.0",
+        "@angular/animations": "^20.3.16",
+        "@angular/cdk": "^20.2.14",
+        "@angular/common": "^20.3.16",
+        "@angular/compiler": "^20.3.16",
+        "@angular/core": "^20.3.16",
+        "@angular/forms": "^20.3.16",
+        "@angular/platform-browser": "^20.3.16",
+        "@angular/platform-browser-dynamic": "^20.3.16",
+        "@angular/router": "^20.3.16",
+        "@nebular/auth": "^16.0.0",
+        "@nebular/eva-icons": "^16.0.0",
+        "@nebular/theme": "^16.0.0",
         "@ngneat/content-loader": "^7.0.0",
         "angular-resize-event": "git+https://github.com/algirdasc/angular-resize-event.git#9efd4be7a05ff5134f473601ff575b8d1b43286e",
         "bootstrap": "^5.3.8",
@@ -39,16 +39,16 @@
         "zone.js": "^0.15.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^21.1.0",
-        "@angular-eslint/builder": "^21.1.0",
-        "@angular-eslint/eslint-plugin": "^21.1.0",
-        "@angular-eslint/eslint-plugin-template": "^21.1.0",
-        "@angular-eslint/schematics": "^21.1.0",
-        "@angular-eslint/template-parser": "^21.1.0",
-        "@angular/cli": "^21.1.0",
-        "@angular/compiler-cli": "^21.1.0",
-        "@angular/language-service": "^21.1.0",
-        "@angular/localize": "^21.1.0",
+        "@angular-devkit/build-angular": "^20.3.16",
+        "@angular-eslint/builder": "^20.3.16",
+        "@angular-eslint/eslint-plugin": "^20.3.16",
+        "@angular-eslint/eslint-plugin-template": "^20.3.16",
+        "@angular-eslint/schematics": "^20.3.16",
+        "@angular-eslint/template-parser": "^20.3.16",
+        "@angular/cli": "^20.3.16",
+        "@angular/compiler-cli": "^20.3.16",
+        "@angular/language-service": "^20.3.16",
+        "@angular/localize": "^20.3.16",
         "@eslint/eslintrc": "^3.3.3",
         "@eslint/js": "^9.39.2",
         "@schematics/angular": "^19.2.19",
