fix: tanstack preparation

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "@nebular/eva-icons": "^16.0.0",
         "@nebular/theme": "^16.0.0",
         "@ngneat/content-loader": "^7.0.0",
+        "@tanstack/angular-query-experimental": "^5.90.25",
         "angular-resize-event": "git+https://github.com/algirdasc/angular-resize-event.git#9efd4be7a05ff5134f473601ff575b8d1b43286e",
         "bootstrap": "^5.3.8",
         "chart.js": "^4.5.1",
@@ -52,6 +53,7 @@
         "@eslint/eslintrc": "^3.3.3",
         "@eslint/js": "^9.39.2",
         "@schematics/angular": "^19.2.19",
+        "@tanstack/eslint-plugin-query": "^5.91.4",
         "@types/jasmine": "~6.0.0",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~25.0.9",
