--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
     "scripts": {
         "dev": "ng serve --host 0.0.0.0 --port 18002 --disable-host-check",
         "analyze": "eslint src/",
+        "analyze:fix": "eslint src/ --fix",
         "build": "ng build --configuration production",
         "version": "node update-version.js"
     },
